fix: - UserSection on NavBar fixed - a lot of .scss refactoring in NavBar and subcomponents; improved readability and usability - authSlice first_name and last_name changed to firstName and lastName for consistency
feat:
- added new icon: sign-in.svg and user.svg, needed for NavBar
- added new color: Beige (variables.scss)
-  UserSection code was refactor and improved
- UserSection now has dropdown menu and 2 states: not logged in and logged in
- Dropdown menu has working LogOut button; rest of the menu is placeholder for now
- while logging out, the JWT are deleted

--- a/customer-app/src/Pages/AuthPage/AuthPage.module.scss
+++ b/customer-app/src/Pages/AuthPage/AuthPage.module.scss
@@ -25,6 +25,15 @@
         fill: $Burgundy;
 
         transition: fill 0.2s ease;
+
+        &:hover {
+            fill: $Burgundy-Hover;
+        }
+
+        &:hover + span {
+            text-decoration: underline;
+            color: $Burgundy-Hover;
+        }
     }
 
     span {
@@ -34,15 +43,11 @@
         color: $Burgundy;
         font-size: inherit;
         @include apply-font($font-heading);
-    }
 
-    &:hover > span {
-        text-decoration: underline;
-        color: $Burgundy-Hover;
-    }
-
-    &:hover > .left_arrow_icon {
-        fill: $Burgundy-Hover;
+        &:hover {
+            text-decoration: underline;
+            color: $Burgundy-Hover;
+        }
     }
 }
 
